--- a/package.json
+++ b/package.json
@@ -7,13 +7,9 @@
     "lib": "lib",
     "test": "test"
   },
-  "dependencies": {
-    "express": "4",
-    "http-errors": "1",
-    "morgan": "1.9"
-  },
+  "dependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "babel": "babel lib --out-dir dist --presets=@babel/preset-env"
   },
   "repository": {
     "type": "git",
@@ -24,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/Brendan-Leal/todolist_project/issues"
   },
-  "homepage": "https://github.com/Brendan-Leal/todolist_project#readme"
+  "homepage": "https://github.com/Brendan-Leal/todolist_project#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.12.16",
+    "@babel/core": "^7.12.16"
+  }
 }
